Xem nhe ngay 27/6/2015

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,9 +26,11 @@
             android:label="@string/title_activity_register_success" >
         </activity>
         <activity
-            android:name=".home"
+            android:name=".Home"
             android:label="@string/title_activity_home" >
         </activity>
+        <activity android:name=".CollectionDemoActivity" android:label="@string/demo_collection" />
+
     </application>
 
 </manifest>
