Xem nhe ngay 27/6/2015

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,10 @@
             android:name=".Home"
             android:label="@string/title_activity_home" >
         </activity>
-        <activity android:name=".CollectionDemoActivity" android:label="@string/demo_collection" />
+        <activity
+            android:name=".CollectionDemoActivity"
+            android:label="@string/demo_collection" >
+         </activity>
 
     </application>
 
